--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,14 @@ body {
   height: 100vh;
 }
 
+/* 
+
+
+HEADER
+
+
+*/
+
 header {
   background-color: #137a7f;
   font-size: 24px;
@@ -54,21 +62,37 @@ header img {
   color: white;
 }
 
+/* 
+
+
+MAIN
+
+
+*/
+
 main {
-  display: flex;
   flex-grow: 1;
 }
 
 .main-container {
   display: flex;
   height: 100%;
-  flex-grow: 1;
 }
+
+/* 
+
+
+SIDEBAR
+
+
+*/
 
 .sidebar {
   background-color: #86cecb;
-  color: #e12885;
-
+  color: #ed1d85;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   font-weight: 500;
   flex-grow: 1;
   max-width: 300px;
@@ -78,7 +102,6 @@ main {
   display: flex;
   flex-direction: column;
   margin: 10px 0px;
-  border: 2px black solid;
 }
 
 .side-section h2 {
@@ -87,14 +110,13 @@ main {
 }
 
 .side-section ul {
-  list-style-type: none;
+  list-style-type: "\1F4BF";
   display: flex;
   flex-direction: column;
   font-size: 24px;
 }
 
 .side-section ul li {
-  border: 1px black solid;
   padding-left: 20px;
   margin: 5px 0px;
 }
@@ -109,31 +131,79 @@ main {
   font-weight: 700;
 }
 
+/* 
+
+
+MAIN CONTENT
+
+
+*/
+
 .main {
-  padding: 10px;
-  flex-grow: 6;
   display: grid;
-  grid-template-columns: auto;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  flex-grow: 2;
+  padding: 10px;
+}
+
+/* 
+
+
+VIDEO CARD
+
+
+*/
+
+.card-container {
+  border: 2px black solid;
+}
+
+.card-container a {
+  text-decoration: none;
+  color: #ed1d85;
+}
+
+.card-container a:focus {
+  text-decoration: underline;
 }
 
 .card {
   display: flex;
   flex-direction: column;
-  height: 150px;
-  width: 300px;
+  padding: 2px;
+  background-color: white;
+  height: 250px;
+}
+.video {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #bec8d1;
+  height: 100px;
+  flex-grow: 5;
 }
 
 .video img {
-  height: 40px;
+  height: 80px;
+  user-select: none; /* Забороняє виділення тексту та інших елементів */
+  pointer-events: none; /* Забороняє будь-які події, включаючи виділення */
 }
 
-.video {
+.video-name {
   display: flex;
-  flex-grow: 2;
-  background-color: #373b3e;
-  align-items: center;
   justify-content: center;
+  align-items: end;
+  padding: 5px 2px;
 }
+
+/* 
+
+
+FOOTER
+
+
+*/
 
 footer {
   font-size: 24px;
