--- a/styles/home.css
+++ b/styles/home.css
@@ -5,48 +5,6 @@
 }
 
 @media (min-width: 1038px) {
-  body {
-    height: 100vh;
-  }
-
-  /* 
-  
-  
-  HEADER
-  
-  
-  */
-
-  header {
-    font-size: 3.5vh;
-  }
-
-  .header {
-    display: flex;
-    padding: 1vh 2vw;
-  }
-
-  .header-burger {
-    display: none;
-  }
-
-  header img {
-    height: 11vh;
-  }
-
-  .icon img {
-    border: 0.5vh #86cecb solid;
-  }
-
-  .icon img:hover {
-    border: 0.5vh #ed1d85 solid;
-  }
-
-  .list ul li {
-    margin: 0 1vw;
-    padding: 1vh;
-  }
-
   /* 
   
   
@@ -125,6 +83,7 @@
 
   .card {
     height: 30vh;
+
     border: 0.6vh #137a7f solid;
   }
 
@@ -156,64 +115,9 @@
   .video-name h2 {
     font-size: 3vh;
   }
-
-  /* 
-  
-  
-  FOOTER
-  
-  
-  */
-
-  footer {
-    font-size: 3.3vh;
-    padding: 3.4vh 1.5vw;
-  }
 }
 
 @media (max-width: 1038px) {
-  body {
-    height: 100vh;
-  }
-
-  /* 
-  
-  
-  HEADER
-  
-  
-  */
-
-  header {
-    font-size: 3.5vh;
-  }
-
-  .header {
-    display: flex;
-    padding: 1vh 2vw;
-  }
-
-  .header-burger {
-    display: none;
-  }
-
-  header img {
-    height: 11vh;
-  }
-
-  .icon img {
-    border: 0.5vh #86cecb solid;
-  }
-
-  .icon img:hover {
-    border: 0.5vh #ed1d85 solid;
-  }
-
-  .list ul li {
-    margin: 0 1vw;
-    padding: 1vh;
-  }
-
   /* 
   
   
@@ -327,63 +231,10 @@
   .video-name h2 {
     font-size: 3vh;
   }
-
-  /* 
-  
-  
-  FOOTER
-  
-  
-  */
-
-  footer {
-    font-size: 3.3vh;
-    padding: 3.4vh 1.5vw;
-  }
 }
 
-@media (max-width: 673px) {
-  body {
-    height: 100vh;
-  }
-
-  /* 
-  
-  
-  HEADER
-  
-  
-  */
-
-  header {
-    font-size: 3.5vh;
-  }
-
-  .header {
-    display: none;
-  }
-
-  .header-burger {
-    display: flex;
-  }
-
-  header img {
-    height: 11vh;
-  }
-
-  .icon img {
-    border: 0.5vh #86cecb solid;
-  }
-
-  .icon img:hover {
-    border: 0.5vh #ed1d85 solid;
-  }
-
-  .list ul li {
-    margin: 0 1vw;
-    padding: 1vh;
-  }
-
+/*673*/
+@media (max-width: 730px) {
   /* 
   
   
@@ -418,7 +269,7 @@
 
   .side-section h2 {
     padding-left: 1.5vw;
-    font-size: 2vh;
+    font-size: 4vh;
   }
 
   /* .side-section ul {
@@ -487,27 +338,25 @@
   .video-name h2 {
     font-size: 3vh;
   }
-
-  /* 
-  
-  
-  FOOTER
-  
-  
-  */
-
-  footer {
-    font-size: 3.3vh;
-    padding: 3.4vh 1.5vw;
-  }
 }
 
 @media (max-width: 463px) {
   .main {
     grid-template-columns: 1fr;
-    margin: 2vh 2vw;
-    gap: 4vw;
+    margin: 4vh 2vw;
+    gap: 6vh;
     flex-grow: 2;
+    justify-content: center;
+  }
+
+  .side-section h2 {
+    padding-left: 1.5vw;
+    font-size: 2vh;
+  }
+
+  .card {
+    min-width: 70%;
+    justify-self: center;
   }
 }
 
@@ -557,76 +406,6 @@
 
 
  */
-
-body {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-}
-
-/* 
-
-
-HEADER
-
-
-*/
-
-header {
-  background-color: #137a7f;
-  /* font-size: 3.5vh; */
-}
-
-.header {
-  justify-content: space-between;
-  align-items: center;
-  /* padding: 1vh 2vw; */
-}
-
-/* .header-burger {
-  display: none;
-}  */
-
-/* 
-header img {
-  height: 11vh;
-} */
-
-.icon img {
-  border: 0.5vh #86cecb solid;
-  border-radius: 50%;
-}
-
-.icon img:hover {
-  border: 0.5vh #ed1d85 solid;
-}
-
-.list ul {
-  display: flex;
-  justify-content: space-around;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-/* .list ul li {
-  margin: 0 1vw;
-  padding: 1vh;
-} */
-
-.list a {
-  font-weight: 600;
-  text-decoration: none;
-  color: #bec8d1;
-}
-
-.list a:hover {
-  color: white;
-}
-
-.list .active-li {
-  color: white;
-}
 
 /* 
 
@@ -787,22 +566,4 @@ VIDEO CARD
 .card:hover .video-name h2 {
   font-weight: 900;
   text-decoration: underline;
-}
-
-/* 
-
-
-FOOTER
-
-
-*/
-
-footer {
-  /* font-size: 3.3vh; */
-  display: flex;
-  justify-content: center;
-  background-color: #137a7f;
-  color: #bec8d1;
-  font-weight: 900;
-  /* padding: 3.4vh 1.5vw; */
 }
