--- a/style.css
+++ b/style.css
@@ -5,25 +5,67 @@
 }
 
 @media (min-width: 1038px) {
+  body {
+    height: 100vh;
+  }
+
   /* 
-  
-  
-  MAIN
-  
-  
-  */
+      
+      
+      HEADER
+      
+      
+      */
+
+  header {
+    font-size: 3.5vh;
+  }
+
+  .header {
+    display: flex;
+    padding: 1vh 2vw;
+  }
+
+  .header-burger {
+    display: none;
+  }
+
+  header img {
+    height: 11vh;
+  }
+
+  .icon img {
+    border: 0.5vh #86cecb solid;
+  }
+
+  .icon img:hover {
+    border: 0.5vh #ed1d85 solid;
+  }
+
+  .list ul li {
+    margin: 0 1vw;
+    padding: 1vh;
+  }
+
+  /* 
+    
+    
+    MAIN
+    
+    
+    */
 
   .main-container {
     height: 100%;
   }
 
   /* 
-  
-  
-  SIDEBAR
-  
-  
-  */
+    
+    
+    SIDEBAR
+    
+    
+    */
 
   .sidebar {
     display: flex;
@@ -59,12 +101,12 @@
   }
 
   /* 
-  
-  
-  MAIN CONTENT
-  
-  
-  */
+    
+    
+    MAIN CONTENT
+    
+    
+    */
 
   .main {
     grid-template-columns: repeat(3, 1fr);
@@ -74,12 +116,12 @@
   }
 
   /* 
-  
-  
-  VIDEO CARD
-  
-  
-  */
+    
+    
+    VIDEO CARD
+    
+    
+    */
 
   .card {
     height: 30vh;
@@ -115,28 +157,83 @@
   .video-name h2 {
     font-size: 3vh;
   }
+
+  /* 
+      
+      
+      FOOTER
+      
+      
+      */
+
+  footer {
+    font-size: 3.3vh;
+    padding: 3.4vh 1.5vw;
+  }
 }
 
 @media (max-width: 1038px) {
+  body {
+    height: 100vh;
+  }
+
   /* 
-  
-  
-  MAIN
-  
-  
-  */
+      
+      
+      HEADER
+      
+      
+      */
+
+  header {
+    font-size: 3.5vh;
+  }
+
+  .header {
+    display: flex;
+    padding: 1vh 2vw;
+  }
+
+  .header-burger {
+    display: none;
+  }
+
+  header img {
+    height: 11vh;
+  }
+
+  .icon img {
+    border: 0.5vh #86cecb solid;
+  }
+
+  .icon img:hover {
+    border: 0.5vh #ed1d85 solid;
+  }
+
+  .list ul li {
+    margin: 0 1vw;
+    padding: 1vh;
+  }
+
+  /* 
+    
+    
+    MAIN
+    
+    
+    */
 
   .main-container {
     height: 100%;
   }
 
   /* 
-  
-  
-  SIDEBAR
-  
-  
-  */
+    
+    
+    SIDEBAR
+    
+    
+    */
 
   .sidebar {
     display: flex;
@@ -159,7 +256,7 @@
   .main-heading {
     display: none;
     /* padding-left: 1.5vw;
-    font-size: 4vh; */
+      font-size: 4vh; */
   }
 
   .side-section ul {
@@ -167,21 +264,21 @@
   }
 
   /* .side-section ul {
-    font-size: 3.217vh;
-    padding-left: 4vw;
-  }
-
-  .side-section ul li {
-    margin: 0.67vh 0vh;
-  } */
+      font-size: 3.217vh;
+      padding-left: 4vw;
+    }
+  
+    .side-section ul li {
+      margin: 0.67vh 0vh;
+    } */
 
   /* 
-  
-  
-  MAIN CONTENT
-  
-  
-  */
+    
+    
+    MAIN CONTENT
+    
+    
+    */
 
   .main {
     grid-template-columns: repeat(2, 1fr);
@@ -191,12 +288,12 @@
   }
 
   /* 
-  
-  
-  VIDEO CARD
-  
-  
-  */
+    
+    
+    VIDEO CARD
+    
+    
+    */
 
   .card {
     height: 30vh;
@@ -231,17 +328,71 @@
   .video-name h2 {
     font-size: 3vh;
   }
+
+  /* 
+      
+      
+      FOOTER
+      
+      
+      */
+
+  footer {
+    font-size: 3.3vh;
+    padding: 3.4vh 1.5vw;
+  }
 }
 
 /*673*/
 @media (max-width: 730px) {
+  body {
+    height: 100vh;
+  }
+
   /* 
-  
-  
-  MAIN
-  
-  
-  */
+      
+      
+      HEADER
+      
+      
+      */
+
+  header {
+    font-size: 3.5vh;
+  }
+
+  .header {
+    display: none;
+  }
+
+  .header-burger {
+    display: flex;
+  }
+
+  header img {
+    height: 11vh;
+  }
+
+  .icon img {
+    border: 0.5vh #86cecb solid;
+  }
+
+  .icon img:hover {
+    border: 0.5vh #ed1d85 solid;
+  }
+
+  .list ul li {
+    margin: 0 1vw;
+    padding: 1vh;
+  }
+
+  /* 
+    
+    
+    MAIN
+    
+    
+    */
 
   .main-container {
     height: 100%;
@@ -249,12 +400,12 @@
   }
 
   /* 
-  
-  
-  SIDEBAR
-  
-  
-  */
+    
+    
+    SIDEBAR
+    
+    
+    */
 
   .sidebar {
     display: flex;
@@ -273,21 +424,21 @@
   }
 
   /* .side-section ul {
-    font-size: 3.217vh;
-    padding-left: 4vw;
-  }
-
-  .side-section ul li {
-    margin: 0.67vh 0vh;
-  } */
+      font-size: 3.217vh;
+      padding-left: 4vw;
+    }
+  
+    .side-section ul li {
+      margin: 0.67vh 0vh;
+    } */
 
   /* 
-  
-  
-  MAIN CONTENT
-  
-  
-  */
+    
+    
+    MAIN CONTENT
+    
+    
+    */
 
   .main {
     grid-template-columns: repeat(2, 1fr);
@@ -298,12 +449,12 @@
   }
 
   /* 
-  
-  
-  VIDEO CARD
-  
-  
-  */
+    
+    
+    VIDEO CARD
+    
+    
+    */
 
   .card {
     height: 30vh;
@@ -338,9 +489,39 @@
   .video-name h2 {
     font-size: 3vh;
   }
+
+  /* 
+      
+      
+      FOOTER
+      
+      
+      */
+
+  footer {
+    font-size: 3.3vh;
+    padding: 3.4vh 1.5vw;
+  }
 }
 
 @media (max-width: 463px) {
+  .header-container {
+    padding: 2vh 0vh;
+  }
+
+  /* .main {
+      grid-template-columns: 1fr;
+      margin: 2vh 2vw;
+      gap: 4vw;
+      flex-grow: 2;
+      justify-content: center;
+    }
+  
+    .side-section h2 {
+      padding-left: 1.5vw;
+      font-size: 2vh;
+    } */
+
   .main {
     grid-template-columns: 1fr;
     margin: 4vh 2vw;
@@ -358,62 +539,138 @@
     min-width: 70%;
     justify-self: center;
   }
+
+  footer {
+    font-size: 3.3vh;
+    padding: 2vh 0vh;
+    font-size: 2.5vh;
+  }
 }
 
 /* 
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+     */
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- */
+body {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
 
 /* 
+    
+    
+    HEADER
+    
+    
+    */
 
+header {
+  background-color: #137a7f;
+  /* font-size: 3.5vh; */
+}
 
-MAIN
+.header {
+  justify-content: space-between;
+  align-items: center;
+  /* padding: 1vh 2vw; */
+}
 
+/* .header-burger {
+      display: none;
+    }  */
 
-*/
+/* 
+    header img {
+      height: 11vh;
+    } */
+
+.icon img {
+  border: 0.5vh #86cecb solid;
+  border-radius: 50%;
+}
+
+.icon img:hover {
+  border: 0.5vh #ed1d85 solid;
+}
+
+.list ul {
+  display: flex;
+  justify-content: space-around;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+/* .list ul li {
+      margin: 0 1vw;
+      padding: 1vh;
+    } */
+
+.list a {
+  font-weight: 600;
+  text-decoration: none;
+  color: #bec8d1;
+}
+
+.list a:hover {
+  color: white;
+}
+
+.list .active-li {
+  color: white;
+}
+
+/* 
+  
+  
+  MAIN
+  
+  
+  */
 
 main {
   flex-grow: 1;
@@ -425,19 +682,19 @@ main {
 }
 
 /* 
-
-
-SIDEBAR
-
-
-*/
+  
+  
+  SIDEBAR
+  
+  
+  */
 
 .sidebar {
   background-color: #86cecb;
   color: #ed1d85;
   /* display: flex; */
   /* flex-direction: column;
-  justify-content: space-around; */
+    justify-content: space-around; */
   /* flex-grow: 1; */
   /* max-width: 20%; */
 }
@@ -450,8 +707,8 @@ SIDEBAR
 }
 
 /* .side-section-heading {
-
-} */
+  
+  } */
 
 .side-section h2 a {
   color: #ed1d85;
@@ -464,21 +721,21 @@ SIDEBAR
 }
 
 /* .side-section h2 {
-  padding-left: 1.5vw;
-  font-size: 4vh;
-} */
+    padding-left: 1.5vw;
+    font-size: 4vh;
+  } */
 
 /* .side-section ul {
-  list-style-type: "\1F4BF";
-  display: flex;
-  flex-direction: column;
-  font-size: 3.217vh;
-  padding-left: 4vw;
-} */
+    list-style-type: "\1F4BF";
+    display: flex;
+    flex-direction: column;
+    font-size: 3.217vh;
+    padding-left: 4vw;
+  } */
 
 /* .side-section ul li {
-  margin: 0.67vh 0vh;
-} */
+    margin: 0.67vh 0vh;
+  } */
 
 .side-section ul li a {
   text-decoration: none;
@@ -491,27 +748,27 @@ SIDEBAR
 }
 
 /* 
-
-
-MAIN CONTENT
-
-
-*/
+  
+  
+  MAIN CONTENT
+  
+  
+  */
 
 .main {
   display: grid;
   /* gap: 4vw;
-  margin: 2vh 2vw; */
+    margin: 2vh 2vw; */
   flex-grow: 2;
 }
 
 /* 
-
-
-VIDEO CARD
-
-
-*/
+  
+  
+  VIDEO CARD
+  
+  
+  */
 
 .card {
   /* height: 30vh; */
@@ -544,8 +801,8 @@ VIDEO CARD
 }
 
 /* .video img {
-  height: 10vh;
-} */
+    height: 10vh;
+  } */
 
 .card:hover .video img {
   transform: scale(1.2); /* Scale up by 20% on hover */
@@ -566,4 +823,22 @@ VIDEO CARD
 .card:hover .video-name h2 {
   font-weight: 900;
   text-decoration: underline;
+}
+
+/* 
+    
+    
+    FOOTER
+    
+    
+    */
+
+footer {
+  /* font-size: 3.3vh; */
+  display: flex;
+  justify-content: center;
+  background-color: #137a7f;
+  color: #bec8d1;
+  font-weight: 900;
+  /* padding: 3.4vh 1.5vw; */
 }
