--- a/styles/layer.css
+++ b/styles/layer.css
@@ -106,6 +106,7 @@
   .list ul li {
     margin: 0 1vw;
     padding: 1vh;
+    font-size: 2.7vh;
   }
 
   .burger-list ul {
@@ -179,12 +180,13 @@
   }
 
   .burger-list ul {
-    display: flex;
+    display: none;
   }
 
   .burger-list li {
     margin: 0 1vw;
     padding: 1vh;
+    font-size: 2.5vh;
   }
 
   /* 
@@ -216,7 +218,7 @@
   }
 
   .burger-list ul {
-    display: flex;
+    display: none;
   }
 
   .burger-list li {
